--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -50,7 +50,7 @@
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
     perspective: 1000;
-    background: linear-gradient(90deg, #00071c 0%, #001f7a 100%);
+    background: #00071c;
   }
   .content {
     position: relative;
