--- a/assets/css/bio.css
+++ b/assets/css/bio.css
@@ -54,7 +54,7 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   perspective: 1000;
-  background: #00071c;
+  background: #fff;
 }
 .content {
   position: relative;
@@ -68,7 +68,7 @@ body {
   margin: 35px auto 0 auto;
   font-size: 58px;
   text-align: center;
-  color: #fff;
+  color: #00071c;
   text-shadow: 0 3px 0 #bbb, 0 1px 0 #bbb, 0 2px 0 #bbb,
     0 3px 5px rgba(0, 0, 0, 0.5);
 }
@@ -78,7 +78,7 @@ body {
   width: 265px;
   height: 265px;
   border-radius: 300px;
-  border: solid 8px #fff;
+  border: solid 8px #00071c;
   margin: 20px auto 0 auto;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.08),
     inset 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -152,7 +152,7 @@ body {
   width: 85%;
   height: auto;
   margin: 0 auto;
-  color: #00071c;
+  color: #808080;
   font-size: 17px;
 }
 .content .block a {
@@ -169,17 +169,18 @@ body {
   font-size: 18px;
   line-height: 36px;
   border-radius: 6px;
-  background: #fd69c4;
+  background: #00071c;
 }
 .content .block a:hover {
-  background: #fd78ca;
+  background: #00071c;
 }
 .content .block a:active {
-  background: #fd5abe;
+  background: #00071c;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 .content .block .dot {
   display: block;
+  opacity: 0;
   width: 16px;
   height: 16px;
   position: absolute;
@@ -188,7 +189,7 @@ body {
   left: 0;
   right: 0;
   margin-top: 25px;
-  background-color: #fd69c4;
+  background-color: #00071c;
   border: solid 5px #fff;
   border-radius: 100px;
   z-index: 300;
@@ -251,21 +252,23 @@ body {
   height: 58px;
   padding: 10px 25px 10px 25px;
   line-height: 58px;
-  color: #00071c;
+  color: #fff;
   text-align: center;
   font-weight: bold;
   border-radius: 7px;
-  background-color: #fff;
+  background-color: #00071c;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.08);
 }
 .content .block .date p.right {
   float: left;
   margin-left: 0;
+  transform: translateX(-100px);
   width: auto;
 }
 .content .block .date p.left {
   float: right;
   margin-left: 0;
+  transform: translateX(100px);
   width: auto;
 }
 .content .block .date.right,
@@ -284,11 +287,11 @@ body {
   z-index: 1000;
 }
 ::-moz-selection {
-  background: #fd69c4;
+  background: #00071c;
   color: #fff;
 }
 ::selection {
-  background: #fd69c4;
+  background: #00071c;
   color: #fff;
 }
 @media only screen and (max-width: 1136px) {
@@ -321,8 +324,9 @@ body {
   }
   .content .timeline .block .date p {
     float: none;
-    width: 250px;
+    width: 100vw;
     margin: 0 auto;
+    transform: translateX(0px);
     border-radius: 10px;
   }
 }
